# Finance

./: .gitignore  README.md  build.sh  config.yaml  main.py  pyproject.toml  requirements.txt  test_yf.py  test_yf2.py
data/cli_test/: AAPL.csv  GOOG.csv  MSFT.csv
data/csv/: AAPL.csv  AMGN.csv  AMZN.csv  AXP.csv  BA.csv  CAT.csv  CRM.csv  CSCO.csv  CVX.csv  DIS.csv  GOOG.csv  GS.csv  HD.csv  HON.csv  IBM.csv  JNJ.csv  JPM.csv  KO.csv  MCD.csv  MMM.csv  MRK.csv  MSFT.csv  NKE.csv  NVDA.csv  PG.csv  SHW.csv  TRV.csv  UNH.csv  V.csv  VZ.csv  WMT.csv
data/futu/: AAPL.csv  ABNB.csv  ADBE.csv  ADI.csv  ADP.csv  ADSK.csv  AEP.csv  AGX.csv  ALL.csv  ALM.csv  ALNY.csv  AMAT.csv  AMD.csv  AMGN.csv  AMZN.csv  APP.csv  ARM.csv  ASML.csv  AVGO.csv  AXON.csv  BABA.csv  BIDU.csv  BILI.csv  BKNG.csv  BKR.csv  BOTZ.csv  BRK-B.csv  CAOVY.csv  CCEP.csv  CDNS.csv  CEG.csv  CHAU.csv  CHTR.csv  CLS.csv  CMCSA.csv  COST.csv  CPRT.csv  CRCL.csv  CRDO.csv  CRML.csv  (+141 more)
data/test/: AAPL.csv  AMZN.csv  GOOG.csv  MSFT.csv
finance_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: config.py
src/data_sources/: __init__.py  base.py  ibkr_source.py  yfinance_source.py
src/storage/: __init__.py  base.py  csv_storage.py
src/ticker_sources/: __init__.py  base.py  local_file.py  manual.py  wikipedia.py
test_tickers/: futu.txt  group2.txt
