[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-downloader"
version = "0.1.0"
description = "A flexible financial data downloader supporting multiple sources like Yahoo Finance and IBKR."
authors = [
    { name = "JALDURIEE" }
]
dependencies = [
    "pandas>=2.0.0",
    "yfinance>=0.2.30",
    "ib-insync>=0.9.80",
    "PyYAML>=6.0",
    "requests>=2.30.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0"
]
requires-python = ">=3.8"

[project.scripts]
finance-dl = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "main"]
